# missionforge

./: .gitignore  AGENTS.md  README.md  STATUS.md  pyproject.toml
integrations/deepresearch/: README.md  pyproject.toml
integrations/deepresearch/src/missionforge_deepresearch/: __init__.py  attempt_outputs.py  citation_projector.py  cli.py  compiler.py  evidence.py  extension_grants.py  frontdesk.py  iterative_review.py  judging.py  kernel_refs.py  kernel_v2.py  lifecycle_actions.py  long_memory.py  minimal.py  product_contract.py  project_lifecycle.py  project_seeds.py  quality_evaluation.py  research_attempts.py  research_requests.py  research_revisions.py  runtime.py  search_intent.py  seed_ingestion.py  source_acquisition.py  source_collector.py  source_graph.py  tool_healthcheck.py  tui.py  web_actions.py  web_artifacts.py  web_common.py  web_console.py  web_controls.py  web_seeds.py  (+4 more)
integrations/deepresearch/tests/: test_citation_projector.py  test_cli.py  test_compiler.py  test_deepresearch_import_boundaries.py  test_frontdesk.py  test_iterative_review.py  test_judging.py  test_kernel_v2.py  test_long_memory.py  test_minimal.py  test_product_contract.py  test_quality_evaluation.py  test_runtime.py  test_search_intent.py  test_source_acquisition.py  test_source_collector.py  test_source_graph.py  test_tool_healthcheck.py  test_tui.py  test_web_console.py
integrations/skillfoundry/: README.md  pyproject.toml
integrations/skillfoundry/docs/: bundle_profile_development_guide.md  missionir_first_acceptance_plan.md  skillfoundry_integration.md  skillfoundry_on_missionforge_plan.md  skillfoundry_product_shell_validation_plan.md  task_contract_path.md
integrations/skillfoundry/tests/: test_benchmark_full_product_flow.py  test_frontdesk_bridge.py  test_frontdesk_context.py  test_operator_skillfoundry_smoke.py  test_product_contract.py  test_product_grade_gate.py  test_prompt_only_compiler.py  test_registry.py  test_skill_bundle_validators.py  test_skillfoundry_compiler.py  test_skillfoundry_frontdesk_flow.py  test_skillfoundry_import_boundaries.py  test_skillfoundry_integration_contracts.py  test_skillfoundry_live_dogfood.py  test_skillfoundry_product_context_flow.py  test_skillfoundry_runtime_facade.py  test_task_contract_compiler.py  test_value_benchmark_runner.py
(+544 files in other folders)
