[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "missionforge"
version = "0.1.0"
description = "Mission IR runtime for observable LLM workers and verified adaptive closure."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "MissionForge contributors"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
