[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "missionforge"
version = "0.1.0"
description = "Mission IR runtime for observable LLM workers and verified adaptive closure."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "MissionForge contributors"}]
dependencies = []

[project.optional-dependencies]
mem0 = ["mem0ai"]
sandbox-linux = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
missionforge = [
    "_bundled/pi_agent_runtime/NOTICE",
    "_bundled/pi_agent_runtime/package.json",
    "_bundled/pi_agent_runtime/package-lock.json",
    "_bundled/pi_agent_runtime/tsconfig.json",
    "_bundled/pi_agent_runtime/dist/*.js",
    "_bundled/pi_agent_runtime/src/*.ts",
]
