[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "missionforge-deepresearch"
version = "0.1.0"
description = "Thin academic Deep Research integration for MissionForge."
requires-python = ">=3.11"
license = {text = "Proprietary"}
dependencies = [
  "missionforge",
]

[project.scripts]
missionforge-deepresearch = "missionforge_deepresearch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
