[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "missionforge-skillfoundry"
version = "0.1.0"
description = "External SkillFoundry integration for MissionForge MissionIR compilation."
requires-python = ">=3.11"
license = {text = "Proprietary"}
dependencies = [
  "missionforge",
]

[tool.setuptools.packages.find]
where = ["src"]
